Update project and remove unneeded models
